fix spacing with margin

--- a/metager/resources/less/metager/pages/help.less
+++ b/metager/resources/less/metager/pages/help.less
@@ -67,6 +67,10 @@
     justify-content: space-evenly;
     flex-wrap:wrap;
 }
+.back-arrow{
+    margin-right: 0.25em;
+    margin-bottom: 0.2em;
+}
 .help-topic, .help-topic:visited {
         width:20vw;
         max-width: 220px;
